--- a/RecipeApp/templates/RecipeApp/content.html
+++ b/RecipeApp/templates/RecipeApp/content.html
@@ -21,6 +21,7 @@
         <div class="col-lg-3 col-sidebar">
             <div class="row row-sidebar">
                 <form action="#" method="get">
+                    {% csrf_token %}
                     <input type="text" class="form-control" name="search" id="search" placeholder="Search">
                 </form>
             </div>
