Add some filters for popular/new/trending
Signed-off-by: Walker J Crouse <walker.crouse@uvm.edu>

--- a/RecipeApp/templates/RecipeApp/categories.html
+++ b/RecipeApp/templates/RecipeApp/categories.html
@@ -3,5 +3,7 @@
 {% block title %}Home | Categories{% endblock %}
 
 {% block main %}
-<div class="row"><h1>Categories</h1></div>
+<div class="container-fluid">
+    <h1>Categories</h1>
+</div>
 {% endblock %}
