--- a/RecipeApp/templates/RecipeApp/featured.html
+++ b/RecipeApp/templates/RecipeApp/featured.html
@@ -3,8 +3,8 @@
 {% block title %}Home | Featured{% endblock %}
 
 {% block main %}
-<div class="row"><h1>Featured</h1></div>
-<div class="row">
+<div class="container-fluid">
+    <h1>Featured</h1>
     {% include 'RecipeApp/recipeList.html' %}
 </div>
 {% endblock %}
