--- a/RecipeApp/templates/RecipeApp/recipeDetail.html
+++ b/RecipeApp/templates/RecipeApp/recipeDetail.html
@@ -9,7 +9,7 @@
     <p>{{ recipe.summary }}</p>
     <p>{{ recipe.prepTime }} prep time | {{ recipe.cookTime }} cook time</p>
     <p>Serves {{ recipe.servings }} | {{ recipe.calories }} calories</p>
-    <p>Rating: {{ recipe.avgRating }}</p>
+    <p>Rating: {{ recipe.avg_rating }}</p>
     <h5>Ingredients</h5>
     <ul>
     {% for ing in ingredients %}
