--- a/RecipeApp/templates/RecipeApp/trending.html
+++ b/RecipeApp/templates/RecipeApp/trending.html
@@ -3,8 +3,8 @@
 {% block title %}Home | Trending{% endblock %}
 
 {% block main %}
-<div class="row"><h1>Trending</h1></div>
-<div class="row">
+<div class="container-fluid">
+    <h1>Trending</h1>
     {% include 'RecipeApp/recipeList.html' %}
 </div>
 {% endblock %}
