--- a/RecipeApp/templates/RecipeApp/myRecipes.html
+++ b/RecipeApp/templates/RecipeApp/myRecipes.html
@@ -3,11 +3,9 @@
 {% block title %}Home | My Recipes{% endblock %}
 
 {% block main %}
-<div class="row"><h1>My Recipes</h1></div>
-<div class="row">
+<div class="container-fluid">
+    <h1>My Recipes</h1>
     <a href="{% url 'submit' %}">Create a new recipe</a>
-</div>
-<div class="row">
     {% include 'RecipeApp/recipeList.html' %}
 </div>
 {% endblock %}
