--- a/RecipeApp/templates/RecipeApp/categories.html
+++ b/RecipeApp/templates/RecipeApp/categories.html
@@ -5,5 +5,10 @@
 {% block main %}
 <div class="container-fluid">
     <h1>Categories</h1>
+    <ul>
+    {% for category in categoryList %}
+        <li><a href="{% url 'categoryDetail' category.name %}">{{ category.name }}</a></li>
+    {% endfor %}
+    </ul>
 </div>
 {% endblock %}
