Basics for RESTful API
Signed-off-by: Walker J Crouse <walker.crouse@uvm.edu>

--- a/RecipeApp/templates/RecipeApp/recipeDetail.html
+++ b/RecipeApp/templates/RecipeApp/recipeDetail.html
@@ -7,7 +7,7 @@
     <h1>{{ recipe.name }}</h1>
     <p>by {{ recipe.user.username }}</p>
     <p>{{ recipe.summary }}</p>
-    <p>{{ recipe.prepTime }} prep time | {{ recipe.cookTime }} cook time</p>
+    <p>{{ recipe.prep_time }} prep time | {{ recipe.cook_time }} cook time</p>
     <p>Serves {{ recipe.servings }} | {{ recipe.calories }} calories</p>
     <p>Rating: {{ recipe.avg_rating }}</p>
     <h5>Ingredients</h5>
