--- a/RecipeApp/templates/RecipeApp/submitRecipe.html
+++ b/RecipeApp/templates/RecipeApp/submitRecipe.html
@@ -22,12 +22,12 @@
             <textarea class="form-control" maxlength="1000" name="summary" id="summary"></textarea>
         </div>
         <div class="form-group">
-            <label for="prepTime">Prep time</label>
-            <input type="text" class="form-control" name="prepTime" id="prepTime" placeholder="1 hour">
+            <label for="prep_time">Prep time</label>
+            <input type="text" class="form-control" name="prep_time" id="prep_time" placeholder="1 hour">
         </div>
         <div class="form-group">
-            <label for="cookTime">Cook time</label>
-            <input type="text" class="form-control" name="cookTime" id="cookTime" placeholder="1 hour">
+            <label for="cook_time">Cook time</label>
+            <input type="text" class="form-control" name="cook_time" id="cook_time" placeholder="1 hour">
         </div>
         <div class="form-group">
             <label for="servings">Servings</label>
