--- a/RecipeApp/templates/RecipeApp/my_recipes.html
+++ b/RecipeApp/templates/RecipeApp/my_recipes.html
@@ -6,6 +6,6 @@
 <div class="container-fluid">
     <h1>My Recipes</h1>
     <a href="{% url 'submit' %}">Create a new recipe</a>
-    {% include 'RecipeApp/recipeList.html' %}
+    {% include 'RecipeApp/recipe_list.html' %}
 </div>
 {% endblock %}
