--- a/RecipeApp/templates/RecipeApp/categories.html
+++ b/RecipeApp/templates/RecipeApp/categories.html
@@ -7,7 +7,7 @@
     <h1>Categories</h1>
     <ul>
     {% for category in categoryList %}
-        <li><a href="{% url 'categoryDetail' category.name %}">{{ category.name }}</a></li>
+        <li><a href="{% url 'category_detail' category.name %}">{{ category.name }}</a></li>
     {% endfor %}
     </ul>
 </div>
