--- a/RecipeApp/templates/RecipeApp/new.html
+++ b/RecipeApp/templates/RecipeApp/new.html
@@ -5,6 +5,6 @@
 {% block main %}
 <div class="container-fluid">
     <h1>New</h1>
-    {% include 'RecipeApp/recipeList.html' %}
+    {% include 'RecipeApp/recipe_list.html' %}
 </div>
 {% endblock %}
