--- a/RecipeApp/templates/RecipeApp/submit_recipe.html
+++ b/RecipeApp/templates/RecipeApp/submit_recipe.html
@@ -4,14 +4,41 @@
 
 {% load static %}
 {% block scripts %}
-<script src="{% static 'RecipeApp/scripts/submitRecipe.js' %}"></script>
+<script src="{% static 'RecipeApp/scripts/submit_recipe.js' %}"></script>
 {% endblock %}
 
 {% block content %}
 <div class="container">
     <h1>Submit Recipe</h1>
 
-    <form action="{% url 'submit' %}" method="post" id="recipeForm">
+    {% if form.errors %}
+        <div class="alert alert-danger">
+        {% for field in form %}
+            {% for error in field.errors %}
+                <p>
+                    <strong>
+                        {% if field.name == 'name' %}
+                            Recipe name:
+                        {% elif field.name == 'summary' %}
+                            Summary:
+                        {% elif field.name == 'prep_time' %}
+                            Prep time:
+                        {% elif field.name == 'cook_time' %}
+                            Cook time:
+                        {% elif field.name == 'servings' %}
+                            Servings:
+                        {% elif field.name == 'calories' %}
+                            Calories:
+                        {% endif %}
+                    </strong>
+                    {{ error }}
+                </p>
+            {% endfor %}
+        {% endfor %}
+        </div>
+    {% endif %}
+
+    <form action="{% url 'submit' %}" method="post" id="recipe_form">
         {% csrf_token %}
         <div class="form-group">
             <label for="name">Recipe name</label>
@@ -42,14 +69,23 @@
         </div>
         <div id="ingredients"></div>
         <div class="form-group">
-            <button type="button" class="btn btn-secondary form-control" id="addIngredient">Add ingredient</button>
+            <button type="button" class="btn btn-secondary form-control" id="add_ingredient">Add ingredient</button>
         </div>
         <div class="form-group">
             <label for="directions">Directions</label>
         </div>
         <div id="directions"></div>
         <div class="form-group">
-            <button type="button" class="btn btn-secondary form-control" id="addDirection">Add direction</button>
+            <button type="button" class="btn btn-secondary form-control" id="add_direction">Add direction</button>
+        </div>
+        <div class="form-group">
+            <label for="categories">Categories</label>
+            <select id="categories" name="categories" class="form-control" aria-describedby="category-help" multiple>
+                {% for category in categories %}
+                    <option value="category{{ category.id }}">{{ category.display_name }}</option>
+                {% endfor %}
+            </select>
+            <small id="category-help" class="form-text text-muted">Select all desired categories</small>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
@@ -64,8 +100,13 @@
         <div class="col-1">
             <input type="number" class="form-control" name="quantity" id="quantity">
         </div>
-        <div class="col-10">
-            <input type="text" class="form-control" name="ingName" id="ingName">
+        <div class="col-9">
+            <input type="text" class="form-control" name="ing_name" id="ing_name">
+        </div>
+        <div class="col-1">
+            <button type="button" class="btn btn-primary btn-confirm-ingredient">
+                <span class="oi oi-check" title="Confirm ingredient" aria-hidden="true"></span>
+            </button>
         </div>
     </div>
 
@@ -76,7 +117,7 @@
             </button>
         </div>
         <div class="col-11">
-            <input type="text" name="dirText" id="dirText" class="form-control">
+            <input type="text" name="dir_text" id="dir_text" class="form-control">
         </div>
     </div>
 </div>
