--- a/RecipeApp/templates/registration/login.html
+++ b/RecipeApp/templates/registration/login.html
@@ -7,7 +7,7 @@
     <h1>Login</h1>
 
     {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
+        <div class="alert alert-danger">Your username and password didn't match. Please try again.</div>
     {% endif %}
 
     <form action="{% url 'login' %}" method="post">
