--- a/RecipeApp/templates/RecipeApp/content.html
+++ b/RecipeApp/templates/RecipeApp/content.html
@@ -45,7 +45,7 @@
                        href="{% url 'trending' %}">Trending</a>
                     <a class="list-group-item {% if explore == 'new' %}active{% endif %}"
                        href="{% url 'new' %}">New</a>
-                    <a class="list-group-item {% if explore == 'categories' %}active{% endif %}"
+                    <a class="list-group-item {% if explore == 'category' %}active{% endif %}"
                        href="{% url 'categories' %}">Categories</a>
                 </div>
             </div>
