--- a/RecipeApp/templates/RecipeApp/trending.html
+++ b/RecipeApp/templates/RecipeApp/trending.html
@@ -5,6 +5,6 @@
 {% block main %}
 <div class="container-fluid">
     <h1>Trending</h1>
-    {% include 'RecipeApp/recipe_list.html' %}
+    {% include 'RecipeApp/recipe/recipe_list.html' %}
 </div>
 {% endblock %}
