--- a/core/static/core/stylesheets/base.css
+++ b/core/static/core/stylesheets/base.css
@@ -1,4 +1,4 @@
-/***** Header ******/
+/******************************************** Header *********************************************/
 .header{
     background-color: #3eb1ff;
     margin-left: 0px;
@@ -38,10 +38,109 @@
 .magnifyin_glass:active{
     background-color: rgba(0, 89, 188, 0.47);
 }
-/***** Header END *****/
+
+/*************************************** Header END ***********************************/
 
 
-/******* Body ******/
+/****************************************** Body *********************************************/
+
+/*-----SLIDE SHOW begin -------*/
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/*-----Slide Show End ----- */
+
 .featured_section {
     height: 300px;
     background-color: #6b6e69;
@@ -105,3 +204,72 @@ a:hover, a:visited, a:link, a:active
     height: 100px;
 }
 /* Recipe display css end */
+
+
+
+
+/* Recipe detail page Start*/
+.board {
+  margin: 10px;
+  height: 450px;
+  width: 450px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+    border: 5px solid black ;
+  float:right;
+}
+
+.recipeviewimage{
+     max-width: 620px;
+     max-height: 500px;
+}
+#recipename{
+    padding:40px;
+    text-align: center;
+    font-size:50px;
+}
+#description{
+    padding: 20px;
+    text-align: center;
+    font-size: 25px;
+}
+#name{
+    font-size:20px;
+}
+.recipeviewimage{
+    padding-top: 10px;
+    height: 460px;
+
+}
+#board2{
+    height: 290px;
+    width: 100%;
+    border: 5px solid black
+}
+div.relative{
+    position:relative;
+    left: 83px;
+    padding-top: 28px;
+}
+
+#rating{
+    font-size:35px;
+}
+#cat{
+    font-size:40px;
+}
+#board3{
+    height: 290px;
+    width: 100%;
+    border: 5px solid black
+}
+#board4{
+    height: 150px;
+    width: 100%;
+    border: 5px solid black
+}
+#rating{
+    font-size:40px;
+}
+/* Recipe detail page END*/
