--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,6 +16,14 @@
             integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
             crossorigin="anonymous"></script>
     <script src="{% static 'core/bootstrap/dist/js/bootstrap.js' %}"></script>
+    <script>
+        var scrollEventHandler = function()
+        {
+          window.scroll(0, window.pageYOffset)
+        }
+
+        window.addEventListener("scroll", scrollEventHandler, false);
+    </script>
 {% block scripts %}{% endblock %}
 
 </head>
