--- a/core/templates/core/content.html
+++ b/core/templates/core/content.html
@@ -17,6 +17,17 @@
 }
     </script>
 {% endblock %}
+
+
+<!------
+
+My recipes shows recipes not created by the user
+
+Can't add ingridients, directions, from backend when adding recipes
+
+--->
+
+
 {% block content %}
 
 <div class = "row featured_section">
@@ -26,19 +37,26 @@
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="img1.jpg" style="width:100%">
+          {% load static %}
+          {% if recipe.image %}
+            <img class="recipeviewimage" src="{% static recipe.image.url %}">
+          {% endif %}
         <div class="text">Caption Text</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="img2.jpg" style="width:100%">
+        {% if recipe.image %}
+            <img class="recipeviewimage" src="{% static recipe.image.url %}">
+          {% endif %}
         <div class="text">Caption Two</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="img3.jpg" style="width:100%">
+        {% if recipe.image %}
+            <img class="recipeviewimage" src="{% static recipe.image.url %}">
+          {% endif %}
         <div class="text">Caption Three</div>
       </div>
 
