--- a/core/templates/core/recipe/recipe_list.html
+++ b/core/templates/core/recipe/recipe_list.html
@@ -1,9 +1,13 @@
 {% if recipe_list %}
 <div class="row">
     {% for recipe in recipe_list %}
-        <div class="col-md-2 recipe_block">
-            <a href={% url 'recipe_detail' recipe.id %}>{{ recipe.name }}</a>
-        </div>
+        <a class="col-md-2 recipe_block" href={% url 'recipe_detail' recipe.id %}>
+        {% load static %}
+          {% if recipe.image %}
+                 <img class="recipe_block_view" src="{% static recipe.image.url %}">
+          {% endif %}
+            <h6 class="text-center">{{ recipe.name }}</h6>
+        </a>
     {% endfor %}
 </div>
 
