--- a/core/static/core/stylesheets/base.css
+++ b/core/static/core/stylesheets/base.css
@@ -195,22 +195,23 @@ a:hover, a:visited, a:link, a:active
 
 /* Recipe display css start */
 .recipe_container{
-    margin-left: 0px;
+    margin-left: 5px;
 }
 .recipe_block{
     overflow: hidden;
-    background-color: #a8cbff;
-    border-color: #020080;
+    background-color: #99e4ff;
+    border-color: #0ad3ff;
     border-width: 5px;
     border-style: solid;
-    height: 250px;
-    margin: 20px;
+    height: 290px;
+    width: 300px;
+    margin: 5px;
     border-radius: 10px;
 }
 .recipe_block_view{
     margin-left: -15px;
-    width: 199px;
-    height: 150px;
+    width: 325px;
+    height: 230px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     transition: all .5s ease;
@@ -218,19 +219,19 @@ a:hover, a:visited, a:link, a:active
 
 .recipe_block_view:hover{
     margin-left: -40px ;
-    margin-top: -30px;
-    width: 250px;
-    height: 180px;
+    margin-top: -100px;
+    width: 360px;
+    height: 250px;
 }
 .recipe_block_recipe_title{
-    margin-left: -10px;
+    margin-left: 5px;
 }
 #recipe_block_info{
     margin-top: -13px;
-    margin-left: -5px;
+    margin-left: 10px;
     color: #1b1e21;
     font-weight: normal;
-    font-size: 10px;
+    font-size: 12px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .star-ratings {
