--- a/core/templates/core/recipe/recipe_list.html
+++ b/core/templates/core/recipe/recipe_list.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     {% for recipe in recipe_list  %}
-        <a class="col-md-2 recipe_block" href={% url 'recipe_detail' recipe.id %}>
+        <a class="recipe_block" href={% url 'recipe_detail' recipe.id %}>
             {% load static %}
             {% if recipe.image %}
                  <img class="recipe_block_view" src="{% static recipe.image.url %}">
@@ -32,8 +32,8 @@
                     <div class="star-ratings-bottom"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
                 </div>
                 <p>
-                    By:{{ recipe.user.username }}<br>
-                    {{ recipe.summary }}<br>
+                    By: {{ recipe.user.username }}<br>
+                    Description: {{ recipe.summary }}<br>
                 </p>
             </div>
         </a>
