--- a/core/static/core/stylesheets/base.css
+++ b/core/static/core/stylesheets/base.css
@@ -5,46 +5,116 @@ html, body {
     overflow-x: -moz-hidde-unscrollable;
 }
 
+p:hover, p:visited, p:active, a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none !important;
+}
+:root{
+    --header_top_margin: 30px;
+    --header_obj_heights: 40px;
+}
+
+
 /******************************************** Header *********************************************/
 .header{
     background-color: #3eb1ff;
     margin-left: 0px;
-    height: 60px;
+    height: 90px;
 }
 
-.searchbar_container, .login_signup_buttons{
-    padding-top: 10px;
-    padding-bottom: 10px;
+#logo{
+    margin-left: 15px;
+    margin-top: -10px;
+    width: 300px;
+    height: 110px;
 }
-
-.login_signup_buttons{
-    position: absolute;
+.login_signup_buttons_container{
+    position: absolute !important;
     right: 1%;
 }
+.login_signup_buttons{
+    margin-top: var(--header_top_margin);
+    height: var( --header_obj_heights);
+}
+#my_account_button{
+    color: white;
+
+}
 .searchbar_container{
-    margin-left: 20%;
+    margin-top: var(--header_top_margin);
+    margin-left: 2%;
 }
 #searchbar, .searchbar_container{
     width: 600px;
+    height: var( --header_obj_heights);
 
 }
-
 .magnifyin_glass{
     background-color: rgba(33, 32, 33, 0.29);
     margin-left: -61px;
     border: none;
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px ;
+    border-bottom-right-radius: 3px;
+    border-top-right-radius: 3px ;
     width: 10%;
     margin-top: 1px;
-    height: 36px;
+    height: 38px;
 }
 .magnifyin_glass:hover{
-    background-color: rgba(0, 92, 135, 0.47);
+    background-color: rgb(104, 198, 255);
 }
 .magnifyin_glass:active{
-    background-color: rgba(0, 89, 188, 0.47);
+    background-color: rgb(29, 135, 255);
 }
+
+
+/*-------- DROP DOWN MENU START ------*/
+
+#browse_button_container{
+    margin-top: var(--header_top_margin);
+    margin-left: 1%;
+    background-color: white;
+    width: 100px;
+    height: var(--header_obj_heights);
+    border-radius: 3px;
+    padding: 10px;
+}
+.browse_button{
+    color: #005cbf;
+    font-size: 15px;
+    margin-left: 10px;
+}
+.dropdown_container{
+   margin-left: -10px;
+   padding-bottom: 26px;
+}
+.mega-dropdown-menu {
+    width: 750px;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+}
+.mega-dropdown-menu > li > ul {
+  padding: 10px;
+  margin: 0;
+}
+.mega-dropdown-menu > li > ul > li {
+  list-style: none;
+}
+.mega-dropdown-menu > li > ul > li > a {
+  display: block;
+  color: #222;
+  padding: 3px 5px;
+}
+.mega-dropdown-menu > li > ul > li > a:hover {
+    background-color: #dddddd;
+}
+.mega-dropdown-menu .dropdown-header {
+  font-size: 18px;
+  color: #2846ff;
+  padding: 5px 60px 5px 5px;
+  line-height: 30px;
+}
+
+/*------- DROP DOWN MENU END ------*/
 
 /*************************************** Header END ***********************************/
 
@@ -52,99 +122,6 @@ html, body {
 /****************************************** Body *********************************************/
 
 /*-----SLIDE SHOW begin -------*/
-* {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
-    display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
 
 /*-----Slide Show End ----- */
 
@@ -160,11 +137,6 @@ html, body {
 }
 .quick_filter_buttons_row{
     background-color: #3499ff;
-}
-
-a:hover, a:visited, a:link, a:active
-{
-    text-decoration: none;
 }
 
 .quick_filter_buttons{
@@ -183,19 +155,22 @@ a:hover, a:visited, a:link, a:active
     transition-duration: 0.2s;
 }
 .quick_filter_buttons:hover {
+    color: white;
     box-shadow: 0 3px 5px 0 rgba(0,0,0,0.2), 0 3px 5px 0 rgba(0,0,0,0.19);
 }
 .quick_filter_buttons:active {
+    color: white;
     background-color: #40b1ff;
 }
-
 /*filter button css end */
 
 
 
 /* Recipe display css start */
+
 .recipe_container{
-    margin-left: 5px;
+    margin-top: -15px;
+    margin-left: 5px !important;
 }
 .recipe_block{
     overflow: hidden;
@@ -211,7 +186,7 @@ a:hover, a:visited, a:link, a:active
 .recipe_block_view{
     margin-left: -15px;
     width: 325px;
-    height: 230px;
+    height: 225px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     transition: all .5s ease;
@@ -224,6 +199,9 @@ a:hover, a:visited, a:link, a:active
     height: 250px;
 }
 .recipe_block_recipe_title{
+    font-size: 15px;
+    font-style: normal;
+    font-weight: bold;
     margin-left: 5px;
 }
 #recipe_block_info{
