--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="{% static 'core/open-iconic/font/css/open-iconic-bootstrap.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/base.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+
+</head>
+<body>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -25,11 +32,91 @@
 
         window.addEventListener("scroll", scrollEventHandler, false);
     </script>
+    <script>
+        $(document).ready(function(){
+        $(".dropdown").hover(
+            function() {
+                $('.dropdown-menu', this).not('.in .dropdown-menu').stop(true,true).slideDown("400");
+                $(this).toggleClass('open');
+            },
+            function() {
+                $('.dropdown-menu', this).not('.in .dropdown-menu').stop(true,true).slideUp("400");
+                $(this).toggleClass('open');
+            }
+        );
+        });
+    </script>
 {% block scripts %}{% endblock %}
 
-</head>
-<body>
-<div class = "row container-fluid header">
+<div class = "row  header">
+
+    <img id = "logo" src="{% static 'media/logo.png' %}">
+
+    <div id = "browse_button_container">
+        <div class="dropdown dropdown_container">
+            <a href="#" class="dropdown-toggle browse_button" data-toggle="dropdown">BROWSE</a>
+            <ul class="dropdown-menu mega-dropdown-menu">
+                <li class="col-sm-3">
+                    <ul>
+                        <li class="dropdown-header">Category 1</li>
+                        <li><a href="#">Col 1 Row 1</a></li>
+                        <li><a href="#">Col 1 Row 2</a></li>
+                        <li><a href="#">Col 1 Row 3</a></li>
+                        <li><a href="#">Col 1 Row 4</a></li>
+
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Category 2</li>
+                        <li><a href="#">Col 1 Row 5</a></li>
+                        <li><a href="#">Col 1 Row 6</a></li>
+
+                    </ul>
+                </li>
+                <li class="col-sm-3">
+                    <ul>
+                        <li class="dropdown-header">Category 3</li>
+                        <li><a href="#">Col 2 Row 1</a></li>
+                        <li><a href="#">Col 2 Row 2</a></li>
+                        <li><a href="#">Col 2 Row 3</a></li>
+                        <li><a href="#">Col 2 Row 4</a></li>
+
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Category 4</li>
+                        <li><a href="#">Col 2 Row 5</a></li>
+                        <li><a href="#">Col 2 Row 6</a></li>
+                    </ul>
+                </li>
+                <li class="col-sm-3">
+                    <ul>
+                        <li class="dropdown-header">Category 5</li>
+                        <li><a href="#">Col 3 Row 1</a></li>
+                        <li><a href="#">Col 3 Row 2</a></li>
+                        <li><a href="#">Col 3 Row 3</a></li>
+                        <li><a href="#">Col 3 Row 4</a></li>
+
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Category 6</li>
+                        <li><a href="#">Col 3 Row 5</a></li>
+                        <li><a href="#">Col 3 Row 6</a></li>
+                    </ul>
+                </li>
+                <li class="col-sm-3">
+                    <ul>
+                        <li class="dropdown-header">Category 7</li>
+                        <li><a href="#">Col 4 Row 1</a></li>
+                        <li><a href="#">Col 4 Row 2</a></li>
+                        <li><a href="#">Col 4 Row 3</a></li>
+                        <li><a href="#">Col 4 Row 4</a></li>
+
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Category 8</li>
+                        <li><a href="#">Col 4 Row 5</a></li>
+                        <li><a href="#">Col 4 Row 6</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <div class="searchbar_container">
         <form action="{% url 'search' %}" method="get">
             {% csrf_token %}
@@ -41,17 +128,27 @@
             </div>
         </form>
     </div>
-    <div class="btn-group login_signup_buttons" role="group">
+
+    <span class="btn-group login_signup_buttons_container" role="group">
         {% if not request.user.is_authenticated %}
-            <a href="{% url 'login' %}" role="button" class="btn btn-primary">Log in</a>
-            <a href="{% url 'signup' %}" role="button" class="btn btn-secondary">Sign up</a>
+            <a href="{% url 'login' %}" role="button" class=" login_signup_buttons">Log in</a>
+            <a href="{% url 'signup' %}" role="button" class="btn btn-secondary login_signup_buttons">Sign up</a>
         {% else %}
-            <a href="{% url 'logout' %}" role="button" class="btn btn-secondary">Sign out</a>
+                <div class="btn btn-primary login_signup_buttons dropdown">
+                  <a href="#" class="dropdown-toggle" id = "my_account_button" data-toggle="dropdown" role="button" aria-expanded="false">My account</a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">Profile</a></li>
+                      <li class="divider"></li>
+                    <li><a href="{% url 'user_recipes' request.user.username %}">My Recipes</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">Preferences</a></li>
+                  </ul>
+                </div>
+             <a href="{% url 'logout' %}" role="button" class="btn btn-secondary login_signup_buttons">Sign out</a>
         {% endif %}
-    </div>
+    </span>
 </div>
 {% block content %}{% endblock %}
-
 
 </body>
 </html>
