--- a/core/templates/core/main/content.html
+++ b/core/templates/core/main/content.html
@@ -20,7 +20,7 @@ Can't add ingridients, directions, from backend when adding recipes
     <a class="quick_filter_buttons {% if explore == 'popular' %}active{% endif %}" href="{% url 'popular' %}">Popular</a>
     <a class="quick_filter_buttons {% if explore == 'trending' %}active{% endif %}" href="{% url 'trending' %}">Trending</a>
     <a class="quick_filter_buttons {% if explore == 'new' %}active{% endif %}" href="{% url 'new' %}">New</a>
-    <a class="quick_filter_buttons {% if explore == 'category' %}active{% endif %}" href="{% url 'categories' %}">Categories</a>
+    <a class="quick_filter_buttons {% if explore == 'categories' %}active{% endif %}" href="{% url 'categories' %}">Categories</a>
  </div>
 </div>
 
