--- a/core/templates/core/categories/category_detail.html
+++ b/core/templates/core/categories/category_detail.html
@@ -1,10 +1,10 @@
-{% extends 'core/content.html' %}
+{% extends 'core/main/content.html' %}
 
 {% block title %}Categories | {{ category.name }}{% endblock %}
 
 {% block main %}
 <div class="container-fluid">
     <h1>{{ category.name }}</h1>
-    {% include 'core/recipe/recipe_list.html' %}
+    {% include 'core/recipes/recipe_list.html' %}
 </div>
 {% endblock %}
