--- a/core/templates/core/recipes/recipe_submit.html
+++ b/core/templates/core/recipes/recipe_submit.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h1>Submit Recipe</h1>
 
-    {% include 'core/recipe/recipe_form.html' %}
+    {% include 'core/recipes/recipe_form.html' %}
 
 </div>
 {% endblock %}
