--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -85,20 +85,23 @@
 
     <span class="btn-group login_signup_buttons_container" role="group">
         {% if not request.user.is_authenticated %}
-            <a href="{% url 'login' %}" role="button" class=" login_signup_buttons">Log in</a>
+            <a href="{% url 'login' %}" role="button" class="btn btn-primary login_signup_buttons">Log in</a>
             <a href="{% url 'signup' %}" role="button" class="btn btn-secondary login_signup_buttons">Sign up</a>
         {% else %}
-            <div class="btn btn-primary login_signup_buttons dropdown">
-                <a href="#" class="dropdown-toggle" id = "my_account_button" data-toggle="dropdown" role="button" aria-expanded="false">My account</a>
+            <div class="btn btn-primary login_signup_buttons dropdown pull-right">
+                <a href="#" class="dropdown-toggle" id = "my_account_button" data-toggle="dropdown" role="button" aria-expanded="false">
+                    {{ request.user.username }}
+                </a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="{% url 'user_profile' request.user.username %}">Profile</a></li>
+                    <li><a>Signed in as <strong>{{ request.user.username }}</strong></a></li>
                     <li class="divider"></li>
-                    <li><a href="{% url 'user_recipes' request.user.username %}">My Recipes</a></li>
+                    <li><a href="{% url 'user_profile' request.user.username %}">Your profile</a></li>
+                    <li><a href="{% url 'user_recipes' request.user.username %}">Your recipes</a></li>
                     <li class="divider"></li>
                     <li><a href="{% url 'preferences' %}">Preferences</a></li>
+                    <li><a href="{% url 'logout' %}">Sign out</a></li>
                 </ul>
             </div>
-            <a href="{% url 'logout' %}" role="button" class="btn btn-secondary login_signup_buttons">Sign out</a>
         {% endif %}
     </span>
 </div>
