--- a/core/templates/core/users/user_recipes.html
+++ b/core/templates/core/users/user_recipes.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 <div class="container-fluid">
-    <h1>My Recipes</h1>
+    <h1>{{ user.username }}'s recipes</h1>
     <a href="{% url 'submit_recipe' %}">Create a new recipe</a>
     {% include 'core/recipes/recipe_list.html' %}
 </div>
